# dbt-flink-adapter

./: Dockerfile  Makefile  README.md  agents.md  dev-requirements.txt  docker-compose.yml
adapter/: README.md  pyproject.toml
adapter/dbt/adapters/flink_http/: __init__.py  __version__.py
adapter/dbt_flink_http_adapter/: __init__.py  connections.py  impl.py
adapter/dbt_flink_http_adapter/include/flink_http/: dbt_project.yml
adapter/dbt_flink_http_adapter/include/flink_http/macros/adapters/: get_catalog.sql  get_columns_in_relation.sql  list_relations_without_caching.sql  list_schemas.sql
adapter/dbt_flink_http_adapter/include/flink_http/macros/materializations/: table.sql  view.sql
adapter/examples/dbt_http_demo/: dbt_project.yml
adapter/examples/dbt_http_demo/models/: example.sql
adapter/tests/: test_connection_manager.py
envs/flink-1.16/: docker-compose.yml
proxy/: config.py  flink_client.py  idempotency.py  main.py  requirements.txt  schemas.py
proxy/examples/: example.sql
proxy/tests/: test_sql_endpoint.py
