[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-flink-http-adapter"
version = "0.1.0"
description = "Hackathon HTTP adapter that routes dbt SQL execution through the Flink SQL proxy"
requires-python = ">=3.9"
dependencies = [
  "dbt-core>=1.4.0,<1.9.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "dbt_flink_http_adapter*",
  "dbt.adapters.flink_http*",
]

[tool.setuptools.package-data]
dbt_flink_http_adapter = ["include/**/*"]

# dbt plugin discovery: point to the shim module
[project.entry-points."dbt.adapters"]
flink_http = "dbt.adapters.flink_http"
